# ormlitex

./: Cargo.toml  Justfile  README.md
attr/: Cargo.toml
attr/src/: attr.rs  ext.rs  lib.rs  metadata.rs  syndecode.rs
cli/: Cargo.toml
cli/src/: main.rs  util.rs
cli/src/command/: down.rs  init.rs  migrate.rs  up.rs
core/: Cargo.toml  README.md
core/src/: error.rs  model.rs  schema.rs
core/src/query_builder/: select.rs  util.rs
macro/: Cargo.toml
macro/src/: lib.rs  util.rs
macro/src/codegen/: common.rs  from_row.rs  insert.rs  insert_model.rs  into_arguments.rs  join_description.rs  meta.rs  model.rs  model_builder.rs  mysql.rs  postgres.rs  select.rs  sqlite.rs  update.rs
ormlitex/: Cargo.toml  Justfile
ormlitex/examples/: many-to-one.rs  simple.rs
ormlitex/src/: lib.rs  model.rs
ormlitex/tests/: setup.rs
ormlitex/tests/incomplete_tests/multiple_databases/: 03-many-to-many.rs  04-one-to-many.rs  main.rs
ormlitex/tests/multifile/: main.rs  organization.rs  user.rs
ormlitex/tests/postgres/: complex.rs
ormlitex/tests/sqlite/: 01-table-meta.rs  02-update-partial.rs  03-many-to-one-join.rs  04-allow-clone-primary-key.rs  05-keyword-column.rs  06-insertable.rs
