[package]
name = "ormlitex-attr"
version = "0.17.1"
edition = "2021"
description = "See `ormlitex`."
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
license = "MIT"
repository = "https://github.com/holmofy/ormlitex"
homepage = "https://github.com/holmofy/ormlitex"
documentation = "https://docs.rs/ormlitex"

[lib]
doctest = false

[features]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2", features = ["full", "extra-traits"] }
derive_builder = "0.12"
structmeta = "0.2"
convert_case = "0.6"
anyhow = "1.0"
ignore = "0.4"
sqlmo = "0.16"
tracing = "0.1"
