[package]
name = "ormlitex-cli"
version = "0.17.1"
edition = "2021"
description = "An ORM for people who love SQL. Use the `ormlitex` crate, not this one."
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
license = "MIT"
repository = "https://github.com/holmofy/ormlitex"

[[bin]]
name = "ormlitex"
path = "src/main.rs"

[features]
#mysql = ["sqlx/mysql"]
#sqlite = ["sqlx/sqlite"]
#postgres = ["sqlx/postgres"]
#runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
default = ["ormlitex/postgres", "ormlitex/uuid", "ormlitex/time", "ormlitex/json", "ormlitex/chrono", "ormlitex/runtime-tokio-rustls"]
experimental-sid = []

[dependencies]
anyhow = "1"
time = { version = "0.3", features = ["formatting"] }
clap = { version = "4", features = ["derive"] }
ormlitex = { version = "0.17", path = "../ormlitex" }
ormlitex-core = { version = "0.17", path = "../core" }
ormlitex-attr = { version = "0.17", path = "../attr" }
tokio = { version = "1", features = ["full"] }
sqlmo = { version = "0.16", features = ["tracing"] }
sqlmo_sqlx = "0.16"
syn = "2"
proc-macro2 = "1"
url = "2"
sha2 = "0.10"
regex = "1"
colored = "2"
tracing-subscriber = "0.3"
tracing = "0.1"

[dev-dependencies]
assert_matches = "1"
