[package]
name = "ormlitex-core"
version = "0.17.1"
edition = "2021"
description = "An ORM for people who love SQL. Use the `ormlitex` crate, not this one."
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>", "holmofy <hff1996723@163.com>"]
license = "MIT"
repository = "https://github.com/holmofy/ormlitex"

[features]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
sqlx = "0.7"
sqlparser = "0.35"
thiserror = "1"
sqlmo = "0.16"
ormlitex-attr = { path = "../attr" , version = "0.17" }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
syn = "2"
assert_matches = "1"
uuid = { version = "1", features = ["serde", "v4"] }
