[package]
name = "ormlitex"
version = "0.17.1"
edition = "2021"
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>", "holmofy <hff1996723@163.com>"]
description = "An ORM for people who love SQL"
license = "MIT"
repository = "https://github.com/holmofy/ormlitex"
homepage = "https://github.com/holmofy/ormlitex"
documentation = "https://docs.rs/ormlitex"
autotests = false
readme = "../README.md"
autoexamples = false

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[[test]]
name = "sqlite"
path = "tests/sqlite.rs"
required-features = ["sqlite"]

[[test]]
name = "postgres"
path = "tests/postgres.rs"
required-features = ["postgres"]

[features]
mysql = ["sqlx/mysql", "ormlitex-macro/mysql"]
sqlite = ["sqlx/sqlite", "ormlitex-macro/sqlite", "ormlitex-core/sqlite"]
postgres = ["sqlx/postgres", "ormlitex-macro/postgres", "ormlitex-core/postgres"]
runtime-tokio-rustls = ["ormlitex-macro/runtime-tokio-rustls", "sqlx/runtime-tokio-rustls", "ormlitex-core/runtime-tokio-rustls"]
uuid = ["sqlx/uuid"]
decimal = ["sqlx/rust_decimal"]
chrono = ["sqlx/chrono"]
time = ["sqlx/time"]
json = ["sqlx/json"]
default = ["runtime-tokio-rustls"]

# When you have multiple databases configured, you can use the default-<db> feature to
# set which database the macros will use by default.
# Use the `#[orm(database = "postgres")]` attribute to override the default.
# Use the attribute multiple times to generate code for multiple databases.
default-postgres = ["postgres", "ormlitex-macro/default-postgres"]
default-sqlite = ["sqlite", "ormlitex-macro/default-sqlite"]
default-mysql = ["mysql", "ormlitex-macro/default-mysql"]

[dependencies]
sqlx = { version = "0.7" }
tokio = { version = "1.24.1", features = ["full"] }
ormlitex-macro = { path = "../macro" , version = "0.17.1"}
ormlitex-core = { path = "../core" , version = "0.17.1"}
sqlx-core = "0.7"
sqlmo = "0.16"
tokio-stream = "0.1.14"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
env_logger = "0.10.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
serde = { version = "1.0.130", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
